@@ -1,3 +1,4 @@
+* Limit board action domain to active id and ids
 * Manage creatable attribute of view
 
 Version 6.2.0 - 2021-11-01
